--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <!-- The middle big title -->
       <div class="big-title">
         <div class="text-center">
-          <h1>David Smith</h1>
+          <h1>王国安</h1>
           <p>I'm <span class="sub-title"></span></p>
         </div>
       </div>
