--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!-- About me -->
             <div class="space">
               <h3>ABOUT ME</h3>
-              <p class="text-justify">热爱互联网行业，关注行业动态，抗压能力强学习能力强 对新技术充满好奇、不断探索提高 工作态度认真负责，具有团队合作精神 家住深圳市福田区附近，希望工作地点尽量在深圳。</p>
+              <p class="text-justify">热爱互联网行业，关注行业动态，抗压能力强学习能力强 对新技术充满好奇、不断探索提高 工作态度认真负责，具有团队合作精神。</p>
             </div>
             <!-- End of about me -->
           </div>
